--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@tanstack/react-query": "^5.51.21",
+    "@types/luxon": "^3.4.2",
+    "luxon": "^3.5.0",
+    "pocketbase": "^0.21.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zustand": "^4.5.4"
