--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@dnd-kit/core": "^6.1.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.14",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@tanstack/react-query": "^5.51.21",
     "@types/luxon": "^3.4.2",
     "luxon": "^3.5.0",
+    "mui-sonner": "^1.0.1",
     "pocketbase": "^0.21.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
